objects/CMPL123__RDC_Test_Object__c.object
<CustomObject>
    <description>RDC Test Object</description>
    <fields>
        <fullName>CMPL123__AutoNumber__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CMPL123__Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123__Datetime__c</fullName>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Encrypted_Text__c</fullName>
        <label>Encrypted Text</label>
        <length>18</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CMPL123__Multipicklist__c</fullName>
        <label>Multipicklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>CMPL123__Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Four</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                    <default>true</default>
                    <label>One</label>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Rich_Text__c</fullName>
        <label>Rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CMPL123__TextArea__c</fullName>
        <label>TextArea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Text_not_exist_on_layout__c</fullName>
        <label>Text_not_exist_on_layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CMPL123__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RDC_Test_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RDC_Test_Object</label>
    <nameField>
        <label>RDC_Test_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDC_Test_Objects</pluralLabel>
    <recordTypes>
        <fullName>CMPL123__RDC_First_Record_Type</fullName>
        <active>true</active>
        <label>RDC_First_Record_Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMPL123__RDC_Name_Rule</fullName>
        <active>true</active>
        <description>RDC Name Rule</description>
        <errorConditionFormula>Name = 'Throw validation error message'</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Validation error message.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123__RDC_Text_Not_Exist_On_Layout_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Name = 'Throw validation error message on other field'</errorConditionFormula>
        <errorDisplayField>CMPL123__Text_not_exist_on_layout__c</errorDisplayField>
        <errorMessage>Validation error message.</errorMessage>
    </validationRules>
</CustomObject>